--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #2a2a2a;
+  background: #000;
 }
 
 code {
