--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -12,3 +12,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+footer.app-footer {
+  font-family: Poppins;
+  font-weight: 300;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  min-height: 3rem;
+  background-color: rgba(255,255,255,0.2);
+  margin-top: 3rem;
+}
+
+.copyright {
+  margin-right: 2rem;
+  /* background: #404040;
+  border-radius: 20px; */
+  font-size: .85rem;
+  padding: .25rem .75rem;
+  text-decoration: none;
+}
+
+.copyright:visited,
+.powered:visited {
+  color: #fff;
+}
+
+.powered {
+  color: #cc0000;
+  font-size: .9rem;
+  text-decoration: none;
+}
