--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #000;
+  /* background: #252525; */
+  /* background-image: linear-gradient(to bottom, #323232, #272727, #1c1c1c, #111111, #000000); */
+  background-image: linear-gradient(to top, #323232, #272727, #1c1c1c, #111111, #000000);
 }
 
 code {
@@ -27,7 +29,7 @@ footer.app-footer {
   justify-content: center;
   color: #fff;
   min-height: 3rem;
-  background-color: rgba(255,255,255,0.1);
+  background-color: #000;
   margin-top: 3rem;
 }
 
