minor css fixes for the day

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -42,6 +42,8 @@ footer.app-footer {
   text-decoration: none;
 }
 
+.copyright,
+.powered,
 .copyright:visited,
 .powered:visited {
   color: #fff;
