--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,16 +1,22 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: #000; */
-  background-image: linear-gradient(to top, #323232, #272727, #1c1c1c, #111111, #000000);
+  background-image: linear-gradient(
+    to top,
+    #323232,
+    #272727,
+    #1c1c1c,
+    #111111,
+    #000000
+  );
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -32,10 +38,22 @@ footer.app-footer {
   margin-top: 3rem;
 }
 
+@media (hover: none) {
+  footer.app-footer {
+    display: none;
+  }
+}
+
+@media (pointer: coarse) {
+  footer.app-footer {
+    display: none;
+  }
+}
+
 .copyright {
   margin-right: 2rem;
-  font-size: .85rem;
-  padding: .25rem .75rem;
+  font-size: 0.85rem;
+  padding: 0.25rem 0.75rem;
   text-decoration: none;
 }
 
@@ -49,7 +67,7 @@ footer.app-footer {
 
 .powered {
   color: #cc0000;
-  font-size: .9rem;
+  font-size: 0.9rem;
   text-decoration: none;
 }
 
@@ -72,9 +90,8 @@ footer.app-footer {
 }
 
 .github span {
-  margin-left: .25rem;
-  font-size: .9rem;
+  margin-left: 0.25rem;
+  font-size: 0.9rem;
   font-family: Poppins;
   font-weight: 300;
 }
-
